the third update

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This is just for fun,, i hope you can learn something with my code :-)
+Just example program like Open-DNS..
+redirect from your dns apps to index.php
+:-)
